--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Welcome to Rockey Burgers</title>
     <link href="th.css" rel="stylesheet">
+    <link href="menu.html">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
@@ -10,7 +11,7 @@
         <div class="container">
             <nav>
                 <a href="">Home</a>
-                <a href="">Menu</a>
+                <a href="menu.html">Menu</a>
                 <div id="logo">
                     <div class="img">
                         <img src="Rockey%20Burgers.png">
