--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="parallax">
         <div class="container">
             <nav>
-                <a href="">Home</a>
+                <a href="index.html">Home</a>
                 <a href="menu.html">Menu</a>
                 <div id="logo">
                     <div class="img">
