--- a/menu.html
+++ b/menu.html
@@ -3,35 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <title>Menu</title>
+    <link href="menu.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
 </head>
 <body>
+<div class="parallax">
     <div class="container">
-        <h1>Menu</h1>
-        <h2>Burgers</h2>
-        <p>Our burgers are cooked medium and are very juicy!</p>
-
-        <ul class="burger">
-            <h4>Rockey Burger</h4>
-            <li>$8.25 Two 4 oz. patties, with Awesome Sauce</li>
-            <li>Add Cheese ... $0.75</li>
-            <li>Add Bacon ... $1.25 </li>
-            <h4>Super Burger </h4>
-            <li>$5.75 4 oz. patties, with Awesome Sauce </li>
-            <li>Add Cheese ... $0.50 </li>
-            <li>Add Bacon ... $1.25 </li>
-            <h4>Free Toppings</h4>
-            <li>Lettuce Tomato Red </li>
-            <li>Onions Jalapeños</li>
-            <li>Grilled Onions </li>
-            <li>Housemade Pickles</li>
-        </ul>
-        <div class="fies">
-            <h2>Add Some Fries</h2>
-            <p><b>French Fries</b> $2.75 Delicious freshly peel potatoes fries</p>
-            <p><b>Garlic Fries</b> $3.50 Delicious freshly peel potatoes fries </p>
-            <h4>Add Three Dips</h4>
-            <p>$1.50 Super Sauce, Housemade Mayo, Chipotle</p>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="menu.html">Menu</a>
+            <div id="logo">
+                <div class="img">
+                    <img src="Rockey%20Burgers.png">
+                </div>
+            </div>
+            <a href="">Our Story</a>
+            <a href="">Contact</a>
+        </nav>
+        <div class="slogan">
+            <h1> "Best Quality Burgers in town. Off the charts."</h1>
         </div>
+
+    </div>
+</div>
+</div>
+    <div class="menu">
+        <h1>Menu</h1>
+
+        <ul>
+            <li><a href="#Expando1"> <h2>Burgers</h2></a>
+                <ul class="expando" id="Expando1">
+                    <li>Our burgers are cooked medium and are very juicy!</li>
+                    <h4>Rockey Burger</h4>
+                    <li>$8.25 Two 4 oz. patties, with Awesome Sauce</li>
+                    <li>Add Cheese ... $0.75</li>
+                    <li>Add Bacon ... $1.25 </li>
+                    <h4>Super Burger </h4>
+                    <li>$5.75 4 oz. patties, with Awesome Sauce </li>
+                    <li>Add Cheese ... $0.50 </li>
+                    <li>Add Bacon ... $1.25 </li>
+                    <h4>Free Toppings</h4>
+                    <li>Lettuce Tomato Red </li>
+                    <li>Onions Jalapeños</li>
+                    <li>Grilled Onions </li>
+                    <li>Housemade Pickles</li>
+                </ul>
+            </li>
+        </ul>
+        <ul>
+            <li><a href="#Expando2"> <h2>Fries</h2></a>
+                <ul class="expando" id="Expando2">
+                    <li><b>French Fries</b> $2.75 Delicious freshly peel potatoes fries</li>
+                    <li><b>Garlic Fries</b> $3.50 Delicious freshly peel potatoes fries </li>
+                    <li><h4>Add Three Dips</h4></li>
+                    <li>$1.50 Super Sauce, Housemade Mayo, Chipotle</li>
+                </ul>
+            </li>
+        </ul>
         <ul class="chicken">
             <h2>Chicken</h2>
             <p>Natural free range chicken breast with chipotle aioli</p>
@@ -49,5 +78,13 @@
 
 
     </div>
+<footer>
+    <div class="icon">
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-snapchat-square"></i>
+    </div>
+</footer>
 </body>
 </html>
