added location and career page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                         <img src="Rockey%20Burgers.png">
                     </div>
                 </div>
-                <a href="">Our Story</a>
-                <a href="">Contact</a>
+                <a href="locations.html">Locations</a>
+                <a href="Careers.html">Careers</a>
             </nav>
             <h1> "Best Quality Burgers in town. Off the charts."</h1>
 
