--- a/menu.html
+++ b/menu.html
@@ -18,22 +18,21 @@
                     <img src="Rockey%20Burgers.png">
                 </div>
             </div>
-            <a href="">Our Story</a>
-            <a href="">Contact</a>
+            <a href="locations.html">Locations</a>
+            <a href="Careers.html">Careers</a>
         </nav>
         <div class="slogan">
-            <h1> "Best Quality Burgers in town. Off the charts."</h1>
+            <h1>Menu</h1>
         </div>
 
     </div>
 </div>
 </div>
     <div class="menu">
-        <h1>Menu</h1>
 
-        <ul>
-            <li><a href="#Expando1"> <h2>Burgers</h2></a>
-                <ul class="expando" id="Expando1">
+        <ul style="list-style-type:none;">
+            <li><a href="#Expando1"> <i class="fas fa-hamburger"></i><h2>Burgers</h2></a>
+                <ul class="expando" id="Expando1" style="list-style-type:none;">
                     <li>Our burgers are cooked medium and are very juicy!</li>
                     <h4>Rockey Burger</h4>
                     <li>$8.25 Two 4 oz. patties, with Awesome Sauce</li>
@@ -48,12 +47,13 @@
                     <li>Onions Jalapeños</li>
                     <li>Grilled Onions </li>
                     <li>Housemade Pickles</li>
+
                 </ul>
             </li>
         </ul>
-        <ul>
-            <li><a href="#Expando2"> <h2>Fries</h2></a>
-                <ul class="expando" id="Expando2">
+        <ul style="list-style-type:none;">
+            <li><a href="#Expando2"> <i class="far fa-smile"></i><h2>Fries</h2></a>
+                <ul class="expando" id="Expando2" style="list-style-type:none;">
                     <li><b>French Fries</b> $2.75 Delicious freshly peel potatoes fries</li>
                     <li><b>Garlic Fries</b> $3.50 Delicious freshly peel potatoes fries </li>
                     <li><h4>Add Three Dips</h4></li>
@@ -61,22 +61,52 @@
                 </ul>
             </li>
         </ul>
-        <ul class="chicken">
-            <h2>Chicken</h2>
-            <p>Natural free range chicken breast with chipotle aioli</p>
-            <li><b>Chicken Sandwich</b> ... $8.00</li>
-            <li>Add Jack Cheese ... $0.50</li>
-            <li>Add Bacon ... $1.25</li>
+        <ul style="list-style-type:none;">
+            <li><a href="#Expando3"> <i class="fas fa-drumstick-bite"></i><h2>Chicken</h2></a>
+                <ul class="expando" id="Expando3" style="list-style-type:none;">
+                    <li>Natural free range chicken breast with chipotle aioli</li>
+                    <li><b>Chicken Sandwich</b> ... $8.00</li>
+                    <li>Add Jack Cheese ... $0.50</li>
+                    <li>Add Bacon ... $1.25</li>
+                </ul>
+            </li>
         </ul>
-        <ul class="drinks">
-            <h2>Drinks</h2>
-            <li>Fountain ... $2.50</li>
-            <li>Organic Iced Tea ... $2.75</li>
-            <li>Fresh Lemonade ... $3.25 </li>
-            <li>Water Bottle ... $2.00</li>
+        <ul style="list-style-type:none;">
+            <li><a href="#Expando4"> <i class="fas fa-beer"></i><h2>Drinks</h2></a>
+                <ul class="expando" id="Expando4" style="list-style-type:none;">
+                    <li>Fountain ... $2.50</li>
+                    <li>Organic Iced Tea ... $2.75</li>
+                    <li>Fresh Lemonade ... $3.25 </li>
+                    <li>Water Bottle ... $2.00</li>
+                </ul>
+            </li>
+        </ul>
+        <ul style="list-style-type:none;">
+            <li><a href="#Expando5"> <i class="fas fa-ice-cream"></i><h2>Cones</h2></a>
+                <ul class="expando" id="Expando5" style="list-style-type:none;">
+                    <li>Rockey Creamery organic soft serve ice cream</li>
+                    <li>Regular ... $3.75</li>
+                    <li> - Vanilla, Chocolate, or Swirled</li>
+                    <li>Dipped Cone ... $4.50</li>
+                    <li>- Vanilla ice cream, dipped in chocolate </li>
+                </ul>
+            </li>
+        </ul>
+        <ul style="list-style-type:none;">
+            <li><a href="#Expando6"> <i class="fas fa-blender"></i><h2>Shakes</h2></a>
+                <ul class="expando" id="Expando6" style="list-style-type:none;">
+                    <li>Made with Rockey Creamery organic soft serve </li>
+                    <li>Regular ... $4.75</li>
+                    <li> - Vanilla, Chocolate, or Swirled</li>
+                    <li>Super Shake ... $5.75</li>
+                    <li>- Cookies & Cream, Fresh Strawberries, or Chocolate & Chips</li>
+                    <li>Kids Size ... $3.25</li>
+                    <li>- Vanilla, Chocolate, or Swirled Add Malt ... $0.50</li>
+                </ul>
+            </li>
         </ul>
 
-
+        <h3>"Best burgers in town. Off the charts"</h3>
     </div>
 <footer>
     <div class="icon">
