--- a/Careers.html
+++ b/Careers.html
@@ -5,7 +5,7 @@
     <title>Careers</title>
     <link href="careers.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="parallax">
@@ -24,15 +24,162 @@
         <div class="slogan">
             <h1>Careers</h1>
         </div>
-
     </div>
 </div>
+<div class="announcement">
+    <h2>Join our great team!</h2>
+</div>
+<div class="joinUs">
+    <form method="post">
+        <div class="info">
+            <div class="about">
+                <h3>Personal Info</h3>
+                Let us know who you are.
+            </div>
+            <div>
+                <label for="firstname">First Name: </label>
+                <input type="text" id="firstname" name="firstname">
+            </div>
+            <div>
+                <label for="lastname">Last Name: </label>
+                <input type="text" id="lastname" name="lastname">
+            </div>
+            <div>
+                <label for="address">Street Address </label>
+                <input type="address" id="address" name="address">
+            </div>
+            <div>
+                <label for="address">Address Line 2 </label>
+                <input type="address" id="address2" name="address">
+            </div>
+            <div>
+                <label for="city">City</label>
+                <input type="city" id="city" name="city">
+            </div>
+            <div>
+                <label for="state">State</label>
+                <select name="state" id="state">
+                    <option value="AL">Alabama</option>
+                    <option value="AK">Alaska</option>
+                    <option value="AZ">Arizona</option>
+                    <option value="AR">Arkansas</option>
+                    <option value="CA">California</option>
+                    <option value="CO">Colorado</option>
+                    <option value="CT">Connecticut</option>
+                    <option value="DE">Delaware</option>
+                    <option value="DC">District of Columbia</option>
+                    <option value="FL">Florida</option>
+                    <option value="GA">Georgia</option>
+                    <option value="HI">Hawaii</option>
+                    <option value="ID">Idaho</option>
+                    <option value="IL">Illinois</option>
+                    <option value="IN">Indiana</option>
+                    <option value="IA">Iowa</option>
+                    <option value="KS">Kansas</option>
+                    <option value="KY">Kentucky</option>
+                    <option value="LA">Louisiana</option>
+                    <option value="ME">Maine</option>
+                    <option value="MD">Maryland</option>
+                    <option value="MA">Massachusetts</option>
+                    <option value="MI">Michigan</option>
+                    <option value="MN">Minnesota</option>
+                    <option value="MS">Mississippi</option>
+                    <option value="MO">Missouri</option>
+                    <option value="MT">Montana</option>
+                    <option value="NE">Nebraska</option>
+                    <option value="NV">Nevada</option>
+                    <option value="NH">New Hampshire</option>
+                    <option value="NJ">New Jersey</option>
+                    <option value="NM">New Mexico</option>
+                    <option value="NY">New York</option>
+                    <option value="NC">North Carolina</option>
+                    <option value="ND">North Dakota</option>
+                    <option value="OH">Ohio</option>
+                    <option value="OK">Oklahoma</option>
+                    <option value="OR">Oregon</option>
+                    <option value="PA">Pennsylvania</option>
+                    <option value="RI">Rhode Island</option>
+                    <option value="SC">South Carolina</option>
+                    <option value="SD">South Dakota</option>
+                    <option value="TN">Tennessee</option>
+                    <option value="TX">Texas</option>
+                    <option value="UT">Utah</option>
+                    <option value="VT">Vermont</option>
+                    <option value="VA">Virginia</option>
+                    <option value="WA">Washington</option>
+                    <option value="WV">West Virginia</option>
+                    <option value="WI">Wisconsin</option>
+                    <option value="WY">Wyoming</option>
+                </select>
+                <div>
+                    <label for="zip">Zip Code</label>
+                    <input type="zip" id="zip" name="zip">
+                </div>
+
+                <div>
+                    <label for="phone">Phone</label>
+                    <input type="phone" id="phone" name="phone">
+                </div>
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email">
+                </div>
+            </div>
+        </div>
+        <div class="workHistory">
+            <div class="work">
+                <h3>Work History</h3>
+                Tell us about your last two jobs.
+            </div>
+            <div>
+                <label for="about">What did you do? </label>
+                <textarea id="about" name="about"></textarea>
+            </div>
+            <div>
+                <label for="about">Who did you work for? </label>
+                <textarea id="about" name="about"></textarea>
+            </div>
+            <div>
+                <label for="about">How long were you there? </label>
+                <textarea id="about" name="about"></textarea>
+            </div>
+        </div>
+        <div class="schedule">
+            <div class="title">
+                <h3>Availability</h3>
+                When can you work?
+            </div>
+            <div>
+                <label for="days">Days </label>
+                <input type="radio" id="days" name="availability">
+            </div>
+            <div>
+                <label for="nights">Nights </label>
+                <input type="radio" id="nights" name="availability">
+            </div>
+            <div>
+                <label for="anyTime">Any Time </label>
+                <input type="radio" id="anyTime" name="availability">
+            </div>
+            <div>
+                <label for="about">What makes you a great fit? </label>
+                <textarea id="about" name="about"></textarea>
+            </div>
+            <div class="spaceBetween"></div>
+            <button>Submit</button>
+        </div>
+    </form>
+    <div class="emptySpace"></div>
+</div>
+<div class="preFooter">Find us on Social Media</div>
 <footer>
-    <div class="icon">
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-facebook-square"></i>
-        <i class="fab fa-twitter-square"></i>
-        <i class="fab fa-snapchat-square"></i>
+    <div class="facebook">
+
+        <a href="http://www.facebook.com/keyburgers "> <i class="fab fa-facebook-square"></i></a>
+
+
+        <a href=" http://www.twitter.com/keyburgers"><i class="fab fa-twitter-square"></i> </a>
+
     </div>
 </footer>
 </body>
