--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <title>Welcome to Rockey Burgers</title>
-    <link href="th.css" rel="stylesheet">
+    <link href="home.css" rel="stylesheet">
     <link href="menu.html">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="parallax">
@@ -20,47 +22,79 @@
                 <a href="locations.html">Locations</a>
                 <a href="Careers.html">Careers</a>
             </nav>
-            <h1> "Best Quality Burgers in town. Off the charts."</h1>
+            <div class="slogan">
+                <h1>"Best Quality Burgers in town. Off the charts"</h1>
+            </div>
 
         </div>
     </div>
+
     <div class="body">
-        <h2>About Slogan: Best Quality Burgers in town. Off the charts. </h2>
-        <div class="imga">
+        <div class="wrapImage">
             <img src="dan-gold-E6HjQaB7UEA-unsplash.jpg">
         </div>
-        <div>
+        <article>
             <p>
                 Step into any ROCKEY BURGERS, and you'll notice we're different. From our famous (free) house-made pickles, to the hand-painted signage, to our cheerful staff, we build our restaurants like we build our burgers-sustainably, locally, and with an unwavering commitment to quality.
             </p>
-        </div>
-        <div class="fesh">
             <p>
                 Fresh, quality produce, meat, dairy and buns, sourced from partners located just miles from our restaurants, are the ingredients to making the perfect burger. This commitment to creating the best possible food for our guests is a direct reflection of our promise of creating fast food burgers using slow food values.
             </p>
-        </div>
-        <p>
-            Bite into any Super burger, and taste the difference. Our burgers, fries, and shakes are made with the finest, freshest ingredients available.
-        </p>
-        <p>
-            All our beef is Rockey Farms, humanely-raised, vegetarian-fed, ground fresh daily, and sourced from a family-owned ranch.
-        </p>
-        <p>
-            All of our shakes and cones are made with organic cream from Rockey Creamery, a small, family-owned, organic farm located South of Nephi, Utah.
-        </p>
-        <p>
-            Our buns are baked to our specification by an artisan baker in Nephi, UT
-        </p>
-        <p>
-            The potatoes we use to make our French fries are made from potatoes grown in North America by growers who are required to identify the genetic source of their seed potatoes. We do not work with genetically modified potato varieties. Our potatoes are processed fresh off the field and delivered to us without any modifications. We proudly serve Sir Kensington ketchup.
-        </p>
+
+            <p>
+                Bite into any Super burger, and taste the difference. Our burgers, fries, and shakes are made with the finest, freshest ingredients available.
+            </p>
+            <p>
+                All our beef is Rockey Farms, humanely-raised, vegetarian-fed, ground fresh daily, and sourced from a family-owned ranch.
+            </p>
+            <p>
+                All of our shakes and cones are made with organic cream from Rockey Creamery, a small, family-owned, organic farm located South of Nephi, Utah.
+            </p>
+            <p>
+                Our buns are baked to our specification by an artisan baker in Nephi, UT
+            </p>
+            <p>
+                The potatoes we use to make our French fries are made from potatoes grown in North America by growers who are required to identify the genetic source of their seed potatoes. We do not work with genetically modified potato varieties. Our potatoes are processed fresh off the field and delivered to us without any modifications. We proudly serve Sir Kensington ketchup.
+            </p>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/gM3jV7bOaM8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </article>
+    </div>
+    <div class="faq">
+        <ul style="list-style-type:none;">
+            <li><a href="#Expando1"> <i class="far fa-question-circle" style="display: inline-block; color: black; font-size: 15px;"></i><h2 style="display: inline-block; color: black; font-size: 15px; padding-left: 5px">FAQ</h2></a>
+                <ul class="expando" id="Expando1" style="list-style-type:none;">
+                    <h3 style="text-align: left">Frequently Asked Questions</h3>
+                    <h4>Why is your Rockey Burger So Expensive?</h4>
+                    <li>
+                        We focus on making meals with the best and freshest ingredients, like humanely-raised beef that is ground fresh each day, organic chicken, and Rockey Family Dairy's organic cream for our ice cream cones, sundaes and shakes.
+                    </li>
+                    <li>
+                        Our commitment to freshness and quality means higher prices than you'd find at traditional fast-food burger chains. It also means food that tastes way better - because, well, it is.
+                    </li>
+
+                    <h4>Where does your beef come from?</h4>
+                    <li>
+                        We source our humanely-raised, vegetarian-fed beef from local, family-owned ranches. We use an 85% to 15% protein to fat blend, a mixture of the lean protein and the marbling found on in a cut of steak for our ground beef. The mixture is ground daily, and thus, our burgers taste so amazing.
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </div>
+
+    <div class="preFooter">
+            Find us on Social Media
     </div>
     <footer>
-        <div class="icon">
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-facebook-square"></i>
-            <i class="fab fa-twitter-square"></i>
-            <i class="fab fa-snapchat-square"></i>
+
+        <div class="facebook">
+
+            <a href="http://www.facebook.com/keyburgers "> <i class="fab fa-facebook-square"></i></a>
+
+
+            <a href=" http://www.twitter.com/keyburgers"><i class="fab fa-twitter-square"></i> </a>
+
         </div>
     </footer>
 
