--- a/locations.html
+++ b/locations.html
@@ -5,6 +5,7 @@
     <title>Locations</title>
     <link href="locations.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -26,69 +27,102 @@
         </div>
     </div>
 </div>
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <h2>Downtown Salt Lake City</h2>
-            <p>346 Kearns Street,</p>
-            <p>Salt Lake City, UT 84111 </p>
-            <p>Mon – Fri 11am to 8pm</p>
-            <p>Sat 10am to 8pm</p>
-            <p>Closed Sundays</p>
-            <p>801-677-0070</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d21659.60197014907!2d-111.90144400688823!3d40.75608302691664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s346%20Kearns%20Street%2C%20%20Salt%20Lake%20City%2C%20UT%2084111!5e1!3m2!1sen!2sus!4v1569470973857!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+<div class="cardHolder">
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <h2>Downtown Salt Lake City</h2>
+                <p>346 Kearns Street,</p>
+                <p>Salt Lake City, UT 84111 </p>
+                <p>Mon – Fri 11am to 8pm</p>
+                <p>Sat 10am to 8pm</p>
+                <p>Closed Sundays</p>
+                <p>801-677-0070</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d21659.60197014907!2d-111.90144400688823!3d40.75608302691664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1s346%20Kearns%20Street%2C%20%20Salt%20Lake%20City%2C%20UT%2084111!5e1!3m2!1sen!2sus!4v1569470973857!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <h2>Sandy</h2>
+                <p>346 Kearns Street,</p>
+                <p>Sandy, UT 84093 </p>
+                <p>Mon – Fri 11am to 8pm</p>
+                <p>Sat 10am to 8pm</p>
+                <p>Closed Sundays</p>
+                <p>801-677-0070</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2711.4457364816535!2d-111.8882809848487!3d40.65787707933781!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87528a20ae4d9abf%3A0x3840edb145455eae!2sMurray%20Park%20Ln%2C%20Murray%2C%20UT%2084107!5e1!3m2!1sen!2sus!4v1569471036900!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            </div>
         </div>
     </div>
 </div>
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <h2>Sandy</h2>
-            <p>346 Kearns Street,</p>
-            <p>Sandy, UT 84093 </p>
-            <p>Mon – Fri 11am to 8pm</p>
-            <p>Sat 10am to 8pm</p>
-            <p>Closed Sundays</p>
-            <p>801-677-0070</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2711.4457364816535!2d-111.8882809848487!3d40.65787707933781!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87528a20ae4d9abf%3A0x3840edb145455eae!2sMurray%20Park%20Ln%2C%20Murray%2C%20UT%2084107!5e1!3m2!1sen!2sus!4v1569471036900!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+<div class="cardHolder2">
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <h2>Lehi </h2>
+                <p>1205 Cabela Drive,</p>
+                <p>Lehi, UT 8403  </p>
+                <p>Mon – Fri 11am to 8pm</p>
+                <p>Sat 10am to 8pm</p>
+                <p>Closed Sundays</p>
+                <p>801-677-0070</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2720.374955860443!2d-111.89108318485617!3d40.437691979362754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752803bb455b5bb%3A0x5ec5b79a3d03cd1f!2sCabela&#39;s!5e1!3m2!1sen!2sus!4v1569471122459!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <div class="card">
+                <h2>Provo</h2>
+                <p>3841 N University Ave,</p>
+                <p>Provo, UT 84604</p>
+                <p>Mon – Fri 11am to 8pm</p>
+                <p>Sat 10am to 8pm</p>
+                <p>Closed Sundays</p>
+                <p>801-677-0070</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1835.1629997187633!2d-111.66045323780595!3d40.2451161456579!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d90af5be5706b%3A0x271747d8194befe9!2s841%20N%20University%20Ave%2C%20Provo%2C%20UT%2084604!5e1!3m2!1sen!2sus!4v1569470762051!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+            </div>
         </div>
     </div>
 </div>
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <h2>Lehi </h2>
-            <p>1205 Cabela Drive,</p>
-            <p>Lehi, UT 8403  </p>
-            <p>Mon – Fri 11am to 8pm</p>
-            <p>Sat 10am to 8pm</p>
-            <p>Closed Sundays</p>
-            <p>801-677-0070</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2720.374955860443!2d-111.89108318485617!3d40.437691979362754!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752803bb455b5bb%3A0x5ec5b79a3d03cd1f!2sCabela&#39;s!5e1!3m2!1sen!2sus!4v1569471122459!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-        </div>
-    </div>
+<div class="announcement">
+    <h2>Subscribe Today </h2>
 </div>
-<div class="row">
-    <div class="column">
-        <div class="card">
-            <h2>Provo</h2>
-            <p>3841 N University Ave,</p>
-            <p>Provo, UT 84604</p>
-            <p>Mon – Fri 11am to 8pm</p>
-            <p>Sat 10am to 8pm</p>
-            <p>Closed Sundays</p>
-            <p>801-677-0070</p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1835.1629997187633!2d-111.66045323780595!3d40.2451161456579!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x874d90af5be5706b%3A0x271747d8194befe9!2s841%20N%20University%20Ave%2C%20Provo%2C%20UT%2084604!5e1!3m2!1sen!2sus!4v1569470762051!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+<div class="discount">
+    <form method="post">
+        <div class="info">
+            <div class="about">
+                <h3>Don’t miss out on discounts</h3>
+            </div>
+            <div>
+                <label for="fullname">Full Name </label>
+                <input type="text" id="fullname" name="fullname">
+            </div>
+            <div>
+                <label for="email">Email</label>
+                <input type="text" id="email" name="email">
+            </div>
+            <div>
+                <label for="number">Phone Number </label>
+                <input type="number" id="number" name="number">
+            </div>
+            <div class="spaceBetween"></div>
+            <button>Submit</button>
         </div>
-    </div>
+    </form>
 </div>
-
+<div class="emptySpace"></div>
+<div class="preFooter">Find us on Social Media</div>
 <footer>
-    <div class="icon">
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-facebook-square"></i>
-        <i class="fab fa-twitter-square"></i>
-        <i class="fab fa-snapchat-square"></i>
+    <div class="facebook">
+
+        <a href="http://www.facebook.com/keyburgers "> <i class="fab fa-facebook-square"></i></a>
+
+
+        <a href=" http://www.twitter.com/keyburgers"><i class="fab fa-twitter-square"></i> </a>
+
     </div>
 </footer>
 </body>
