--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
     <title>Menu</title>
     <link href="menu.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -108,12 +109,15 @@
 
         <h3>"Best burgers in town. Off the charts"</h3>
     </div>
+<div class="preFooter">Find us on Social Media</div>
 <footer>
-    <div class="icon">
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-facebook-square"></i>
-        <i class="fab fa-twitter-square"></i>
-        <i class="fab fa-snapchat-square"></i>
+    <div class="facebook">
+
+        <a href="http://www.facebook.com/keyburgers "> <i class="fab fa-facebook-square"></i></a>
+
+
+        <a href=" http://www.twitter.com/keyburgers"><i class="fab fa-twitter-square"></i> </a>
+
     </div>
 </footer>
 </body>
